--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-validator": "^5.3.0",
+    "formidable": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
